# Universal-Lattice

./: Cargo.toml  Codex.md  README.md
src/: lib.rs
src/bulletproofs/: valences.rs
src/halo2/: custom_gates.rs  halo2_lookup.rs  recursive.rs  zk_valence.rs
src/mesh/: mercy_mesh.rs  valence_routing.rs
src/nexi/: noise_0rtt.rs  noise_hybrid.rs  noise_pure.rs  pq_hybrid_protocol.rs  pq_kem.rs  pq_shield.rs  quic_migration.rs  quic_pq.rs
src/plonk/: plonk_valence.rs
src/snarks/: groth16_recursive.rs
src/starks/: stark_valence.rs
src/translations/: valences.toml
