[workspace]
members = [
    "src/mercy_os",
    "src/nexi",
    "src/halo2",
]

[package]
name = "universal-lattice"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rand = "0.8"
hex = "0.4"
# halo2_proofs = { version = "0.2", features = ["gpu"] }  # Uncomment when ready
